tests/e2e/gateway-ingress/00-install.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg-ingress-test
spec:
  version: "11.2.1"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.2.1
    imagePullPolicy: IfNotPresent
    updateStrategy:
      type: rollingUpdate
      rollingUpdate:
        maxUnavailable: 0
        maxSurge: 2
    resources:
      requests: {}
      limits: {}
    management:
      cluster:
        hostname: gateway.brcmlabs.com
    autoscaling:
      enabled: false
    listenPorts:
      harden: true
      custom:
        enabled: false
      ports: []
    service:
      type: LoadBalancer
      ports:
        - name: https
          port: 8443
          targetPort: 8443
          protocol: TCP
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP
    ingress:
      enabled: true
      ingressClassName: nginx
      tls:
        - hosts:
            - dev.ca.com
            - dev-management.ca.com
          secretName: default
      rules:
        - host: dev.ca.com
        - host: dev-management.ca.com
          http:
            paths:
              - backend:
                  service:
                    name: management
                    port:
                      name: management
                path: /
                pathType: Prefix
