tests/e2e/gateway-ingress/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 150
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssg
